# blog_django

./: pyproject.toml
mysite/: db.sqlite3  posts.json
mysite/blog/migrations/: 0001_initial.py
mysite/blog/templates/blog/: base.html
mysite/media/profile_pics/: images.jfif
mysite/mysite/: settings.py  urls.py
mysite/users/: apps.py  views.py
mysite/users/migrations/: 0001_initial.py
